// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellWithIcon component should render the CellWithIcon with a tooltip 1`] = `
<div
  className="cell-with-icon"
>
  <div
    className="cell-with-icon__value"
    title="TUNING"
  >
    TUNING
  </div>
  <ForwardRef(Tooltip)
    title="Hello Foo"
  >
    <ForwardRef(Icon)
      className="cell-with-icon__icon"
    >
      edit
    </ForwardRef(Icon)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`CellWithIcon component should render the CellWithIcon with a tooltip and an action 1`] = `
<div
  className="cell-with-icon"
>
  <div
    className="cell-with-icon__value"
    title="TUNING"
  >
    TUNING
  </div>
  <ForwardRef(Tooltip)
    title="Hello Foo"
  >
    <ForwardRef(IconButton)
      className="cell-with-icon__btn"
      data-testid="toolbar-action-btn"
      onClick={[MockFunction]}
      size="large"
    >
      <ForwardRef(Icon)
        className="cell-with-icon__icon"
      >
        edit
      </ForwardRef(Icon)>
    </ForwardRef(IconButton)>
  </ForwardRef(Tooltip)>
</div>
`;

exports[`CellWithIcon component should render the CellWithIcon with an action 1`] = `
<div
  className="cell-with-icon"
>
  <div
    className="cell-with-icon__value"
    title="TUNING"
  >
    TUNING
  </div>
  <ForwardRef(IconButton)
    className="cell-with-icon__btn"
    data-testid="toolbar-action-btn"
    onClick={[MockFunction]}
    size="large"
  >
    <ForwardRef(Icon)
      className="cell-with-icon__icon"
    >
      edit
    </ForwardRef(Icon)>
  </ForwardRef(IconButton)>
</div>
`;

exports[`CellWithIcon component should render the default CellWithIcon 1`] = `
<div
  className="cell-with-icon"
>
  <div
    className="cell-with-icon__value"
    title="TUNING"
  >
    TUNING
  </div>
  <ForwardRef(Icon)
    className="cell-with-icon__icon"
  >
    edit
  </ForwardRef(Icon)>
</div>
`;
